corrected an issue with the footer as it was not fully responsive on mobile. corrected some css that was flagging.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,6 @@ body {
 
 .bg-index { 
     background-color: #000;
-    background-size: cover;
 }
 
 .pt-100 {
@@ -44,7 +43,6 @@ body {
    /* ------------------------- Title*/
 
 .index-thumbnail{ 
-    padding-top: 2px;
     margin-bottom: 2rem;
     border-bottom: 2px white solid;
     border-top: 2px white solid;
@@ -317,7 +315,7 @@ a.btn-card {
     font-family: 'Oswald', sans-serif;
     font-size: 22px;
     color: #fff;
-    text-align: ;
+    text-align: center;
     padding: 10px 0 10px;;
     background-color: grey;
 }
@@ -332,8 +330,8 @@ a.btn-card {
 }
 
 .blog-page-divide {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
     border-bottom: 2px white solid;
     border-top: 2px white solid;
 }
@@ -499,7 +497,7 @@ background-image: linear-gradient(to top, #000000 0%, grey 100%);
     font-weight: 300;
     height: 57px;
     margin-right: 17px;
-    padding-left: 35px;
+    padding-left: 25px;
     width: 70%;
     cursor: pointer;
 }
@@ -513,7 +511,7 @@ background-image: linear-gradient(to top, #000000 0%, grey 100%);
     font-size: 18px;
     font-weight: 400;
     line-height: 1;
-    padding: 18px 46px;
+    padding: 18px 36px;
     transition: all 0.3s ease 0s;
 }
 .subscribe2-wrapper .subscribe-form button i {
@@ -554,7 +552,7 @@ background-image: linear-gradient(to top, #000000 0%, grey 100%);
 }
 
 .website {
-    letter-spacing: 3px;
+    letter-spacing: 1px;
     font-size: 20px;
 }
 
